NovaScriptParser.js
// Generated from NovaScript.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import NovaScriptListener from './NovaScriptListener.js';
import NovaScriptVisitor from './NovaScriptVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class NovaScriptParser extends antlr4.Parser {

    static grammarFileName = "NovaScript.g4";
    static literalNames = [ null, "';'", "'let'", "'='", "','", "'prompt'", 
                            "'('", "')'", "'Number'", "'parseInt'", "'parseFloat'", 
                            "'console.log'", "'+'", "'-'", "'*'", "'/'", 
                            "'%'", "'!'", "'if'", "'{'", "'}'", "'else'", 
                            "'do'", "'while'", "'for'", "'++'", "'--'", 
                            "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", 
                            "'>='", "'<='" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "ID", "INT", "DECIMAL", "STRING", 
                             "WS" ];
    static ruleNames = [ "programa", "statement", "expressionStatement", 
                         "declaracao", "lista_atrib", "lista_id", "ler", 
                         "funcao_conversao", "escrever", "concatenacao_log", 
                         "elemento_log", "expressao", "expmat", "termo", 
                         "fator", "atomo", "numero", "condicional", "se", 
                         "laco", "inicio", "final", "bloco", "atribuicao", 
                         "condicao", "condicao_or", "condicao_and", "condicao_not", 
                         "condicao_par" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NovaScriptParser.ruleNames;
        this.literalNames = NovaScriptParser.literalNames;
        this.symbolicNames = NovaScriptParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, NovaScriptParser.RULE_programa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 29624356) !== 0) || _la===35) {
	            this.state = 58;
	            this.statement();
	            this.state = 63;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, NovaScriptParser.RULE_statement);
	    var _la = 0;
	    try {
	        this.state = 76;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	        case 5:
	        case 11:
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 69;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 64;
	                this.declaracao();
	                break;

	            case 2:
	                this.state = 65;
	                this.expressionStatement();
	                break;

	            case 3:
	                this.state = 66;
	                this.escrever();
	                break;

	            case 4:
	                this.state = 67;
	                this.ler();
	                break;

	            case 5:
	                this.state = 68;
	                this.atribuicao();
	                break;

	            }
	            this.state = 72;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 71;
	                this.match(NovaScriptParser.T__0);
	            }

	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 74;
	            this.condicional();
	            break;
	        case 22:
	        case 23:
	        case 24:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 75;
	            this.laco();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressionStatement() {
	    let localctx = new ExpressionStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, NovaScriptParser.RULE_expressionStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.atribuicao();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracao() {
	    let localctx = new DeclaracaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, NovaScriptParser.RULE_declaracao);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(NovaScriptParser.T__1);
	        this.state = 81;
	        this.lista_atrib();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_atrib() {
	    let localctx = new Lista_atribContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, NovaScriptParser.RULE_lista_atrib);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this.match(NovaScriptParser.ID);
	        this.state = 86;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 84;
	            this.match(NovaScriptParser.T__2);
	            this.state = 85;
	            this.expressao();
	        }

	        this.state = 96;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 88;
	            this.match(NovaScriptParser.T__3);
	            this.state = 89;
	            this.match(NovaScriptParser.ID);
	            this.state = 92;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===3) {
	                this.state = 90;
	                this.match(NovaScriptParser.T__2);
	                this.state = 91;
	                this.expressao();
	            }

	            this.state = 98;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_id() {
	    let localctx = new Lista_idContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, NovaScriptParser.RULE_lista_id);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 99;
	            this.match(NovaScriptParser.T__3);
	            this.state = 100;
	            this.match(NovaScriptParser.ID);
	            this.state = 101;
	            this.match(NovaScriptParser.T__2);
	            this.state = 102;
	            this.expressao();
	            this.state = 107;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 108;
	        this.match(NovaScriptParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ler() {
	    let localctx = new LerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, NovaScriptParser.RULE_ler);
	    try {
	        this.state = 130;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 110;
	            this.match(NovaScriptParser.T__1);
	            this.state = 111;
	            this.match(NovaScriptParser.ID);
	            this.state = 112;
	            this.match(NovaScriptParser.T__2);
	            this.state = 113;
	            this.funcao_conversao();
	            this.state = 114;
	            this.match(NovaScriptParser.T__4);
	            this.state = 115;
	            this.match(NovaScriptParser.T__5);
	            this.state = 116;
	            this.match(NovaScriptParser.STRING);
	            this.state = 117;
	            this.match(NovaScriptParser.T__6);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 119;
	            this.match(NovaScriptParser.T__1);
	            this.state = 120;
	            this.match(NovaScriptParser.ID);
	            this.state = 121;
	            this.match(NovaScriptParser.T__2);
	            this.state = 122;
	            this.match(NovaScriptParser.T__4);
	            this.state = 123;
	            this.match(NovaScriptParser.T__5);
	            this.state = 124;
	            this.match(NovaScriptParser.STRING);
	            this.state = 125;
	            this.match(NovaScriptParser.T__6);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 126;
	            this.match(NovaScriptParser.T__4);
	            this.state = 127;
	            this.match(NovaScriptParser.T__5);
	            this.state = 128;
	            this.match(NovaScriptParser.STRING);
	            this.state = 129;
	            this.match(NovaScriptParser.T__6);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcao_conversao() {
	    let localctx = new Funcao_conversaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, NovaScriptParser.RULE_funcao_conversao);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1792) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	escrever() {
	    let localctx = new EscreverContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, NovaScriptParser.RULE_escrever);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(NovaScriptParser.T__10);
	        this.state = 135;
	        this.match(NovaScriptParser.T__5);
	        this.state = 139;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 145248) !== 0) || ((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 15) !== 0)) {
	            this.state = 136;
	            this.concatenacao_log();
	            this.state = 141;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 142;
	        this.match(NovaScriptParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	concatenacao_log() {
	    let localctx = new Concatenacao_logContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, NovaScriptParser.RULE_concatenacao_log);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.elemento_log();
	        this.state = 149;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 145;
	                this.match(NovaScriptParser.T__11);
	                this.state = 146;
	                this.elemento_log(); 
	            }
	            this.state = 151;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elemento_log() {
	    let localctx = new Elemento_logContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, NovaScriptParser.RULE_elemento_log);
	    try {
	        this.state = 154;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 152;
	            this.match(NovaScriptParser.STRING);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 153;
	            this.expressao();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressao() {
	    let localctx = new ExpressaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, NovaScriptParser.RULE_expressao);
	    try {
	        this.state = 158;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	        case 6:
	        case 8:
	        case 9:
	        case 10:
	        case 12:
	        case 13:
	        case 17:
	        case 35:
	        case 36:
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 156;
	            this.expmat();
	            break;
	        case 38:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 157;
	            this.match(NovaScriptParser.STRING);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expmat() {
	    let localctx = new ExpmatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, NovaScriptParser.RULE_expmat);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        this.termo();
	        this.state = 165;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 161;
	                _la = this._input.LA(1);
	                if(!(_la===12 || _la===13)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 162;
	                this.termo(); 
	            }
	            this.state = 167;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	termo() {
	    let localctx = new TermoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, NovaScriptParser.RULE_termo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.fator();
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 114688) !== 0)) {
	            this.state = 169;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 114688) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 170;
	            this.fator();
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fator() {
	    let localctx = new FatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, NovaScriptParser.RULE_fator);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 143360) !== 0)) {
	            this.state = 176;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 143360) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 179;
	        this.atomo();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atomo() {
	    let localctx = new AtomoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, NovaScriptParser.RULE_atomo);
	    try {
	        this.state = 195;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	        case 36:
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 181;
	            this.numero();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 182;
	            this.match(NovaScriptParser.T__5);
	            this.state = 183;
	            this.expmat();
	            this.state = 184;
	            this.match(NovaScriptParser.T__6);
	            break;
	        case 8:
	        case 9:
	        case 10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 186;
	            this.funcao_conversao();
	            this.state = 187;
	            this.match(NovaScriptParser.T__5);
	            this.state = 188;
	            this.atomo();
	            this.state = 189;
	            this.match(NovaScriptParser.T__6);
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 191;
	            this.match(NovaScriptParser.T__4);
	            this.state = 192;
	            this.match(NovaScriptParser.T__5);
	            this.state = 193;
	            this.match(NovaScriptParser.STRING);
	            this.state = 194;
	            this.match(NovaScriptParser.T__6);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, NovaScriptParser.RULE_numero);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        _la = this._input.LA(1);
	        if(!(((((_la - 35)) & ~0x1f) === 0 && ((1 << (_la - 35)) & 7) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condicional() {
	    let localctx = new CondicionalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, NovaScriptParser.RULE_condicional);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        this.se();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	se() {
	    let localctx = new SeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, NovaScriptParser.RULE_se);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 201;
	        this.match(NovaScriptParser.T__17);
	        this.state = 202;
	        this.match(NovaScriptParser.T__5);
	        this.state = 203;
	        this.condicao();
	        this.state = 204;
	        this.match(NovaScriptParser.T__6);
	        this.state = 205;
	        this.match(NovaScriptParser.T__18);
	        this.state = 206;
	        this.bloco();
	        this.state = 207;
	        this.match(NovaScriptParser.T__19);
	        this.state = 222;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        if(la_===1) {
	            this.state = 208;
	            this.match(NovaScriptParser.T__20);
	            this.state = 209;
	            this.match(NovaScriptParser.T__18);
	            this.state = 210;
	            this.bloco();
	            this.state = 211;
	            this.match(NovaScriptParser.T__19);

	        } else if(la_===2) {
	            this.state = 213;
	            this.match(NovaScriptParser.T__20);
	            this.state = 214;
	            this.match(NovaScriptParser.T__17);
	            this.state = 215;
	            this.match(NovaScriptParser.T__5);
	            this.state = 216;
	            this.condicao();
	            this.state = 217;
	            this.match(NovaScriptParser.T__6);
	            this.state = 218;
	            this.match(NovaScriptParser.T__18);
	            this.state = 219;
	            this.bloco();
	            this.state = 220;
	            this.match(NovaScriptParser.T__19);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	laco() {
	    let localctx = new LacoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, NovaScriptParser.RULE_laco);
	    var _la = 0;
	    try {
	        this.state = 257;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 22:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 224;
	            this.match(NovaScriptParser.T__21);
	            this.state = 225;
	            this.match(NovaScriptParser.T__18);
	            this.state = 226;
	            this.bloco();
	            this.state = 227;
	            this.match(NovaScriptParser.T__19);
	            this.state = 228;
	            this.match(NovaScriptParser.T__22);
	            this.state = 229;
	            this.match(NovaScriptParser.T__5);
	            this.state = 230;
	            this.condicao();
	            this.state = 231;
	            this.match(NovaScriptParser.T__6);
	            this.state = 233;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===1) {
	                this.state = 232;
	                this.match(NovaScriptParser.T__0);
	            }

	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 235;
	            this.match(NovaScriptParser.T__23);
	            this.state = 236;
	            this.match(NovaScriptParser.T__5);
	            this.state = 237;
	            this.inicio();
	            this.state = 238;
	            this.match(NovaScriptParser.T__0);
	            this.state = 239;
	            this.condicao();
	            this.state = 240;
	            this.match(NovaScriptParser.T__0);
	            this.state = 242;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===35) {
	                this.state = 241;
	                this.final_();
	            }

	            this.state = 244;
	            this.match(NovaScriptParser.T__6);
	            this.state = 245;
	            this.match(NovaScriptParser.T__18);
	            this.state = 246;
	            this.bloco();
	            this.state = 247;
	            this.match(NovaScriptParser.T__19);
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 249;
	            this.match(NovaScriptParser.T__22);
	            this.state = 250;
	            this.match(NovaScriptParser.T__5);
	            this.state = 251;
	            this.condicao();
	            this.state = 252;
	            this.match(NovaScriptParser.T__6);
	            this.state = 253;
	            this.match(NovaScriptParser.T__18);
	            this.state = 254;
	            this.bloco();
	            this.state = 255;
	            this.match(NovaScriptParser.T__19);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	inicio() {
	    let localctx = new InicioContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, NovaScriptParser.RULE_inicio);
	    try {
	        this.state = 266;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 259;
	            this.match(NovaScriptParser.T__1);
	            this.state = 260;
	            this.match(NovaScriptParser.ID);
	            this.state = 261;
	            this.match(NovaScriptParser.T__2);
	            this.state = 262;
	            this.expressao();
	            break;
	        case 35:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 263;
	            this.match(NovaScriptParser.ID);
	            this.state = 264;
	            this.match(NovaScriptParser.T__2);
	            this.state = 265;
	            this.expressao();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	final_() {
	    let localctx = new FinalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, NovaScriptParser.RULE_final);
	    var _la = 0;
	    try {
	        this.state = 273;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 268;
	            this.match(NovaScriptParser.ID);
	            this.state = 269;
	            this.match(NovaScriptParser.T__2);
	            this.state = 270;
	            this.expressao();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 271;
	            this.match(NovaScriptParser.ID);
	            this.state = 272;
	            _la = this._input.LA(1);
	            if(!(_la===25 || _la===26)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


